# xueba

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/cunyi/doctor/llm/: LlamaEngine.kt  ModelConfig.kt
app/src/main/java/com/cunyi/doctor/ui/: ChatAdapter.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/cunyi/doctor/utils/: ImageTextRecognizer.kt
app/src/main/java/com/xueba/emperor/: XuebaEmperorApp.kt
app/src/main/java/com/xueba/emperor/data/: ModelDownloadManager.kt
app/src/main/java/com/xueba/emperor/llm/: LlamaEngine.kt  ModelConfig.kt
app/src/main/java/com/xueba/emperor/ui/: ChatAdapter.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/xueba/emperor/utils/: ImageTextRecognizer.kt
app/src/main/res/drawable/: bg_msg_user.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_message_bot.xml  item_message_user.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
